[gd_scene load_steps=2 format=3 uid="uid://cli25dfku55ss"]

[ext_resource type="Script" uid="uid://xj0bgfqawdis" path="res://puzzle/gate_puzzle_ui.gd" id="1_vfv4c"]

[node name="GatePuzzleUI" type="CanvasLayer"]
script = ExtResource("1_vfv4c")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SlotsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonsBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="Panel/VBoxContainer/ButtonsBar"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/ButtonsBar"]
layout_mode = 2

[node name="NumberPopup" type="PopupPanel" parent="."]

[node name="ScrollContainer" type="ScrollContainer" parent="NumberPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0

[node name="OptionsContainer" type="VBoxContainer" parent="NumberPopup/ScrollContainer"]
layout_mode = 2
